<resources>
    <string name="app_name">Assignment6</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_message">Error Message</string>
    <string name="retry">Retry</string>
    <string name="id">id</string>
    <string name="name">Name</string>
    <string name="username">UserName</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="show_posts">Show Posts</string>
    <string name="zipcode">ZipCode</string>
    <string name="user_details">User Details</string>
    <string name="users_list">Users List</string>
    <string name="error_massage">Error Massage</string>
    <string name="user_posts_data">User Posts Data</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="assignment_6">Assignment 6</string>
</resources>
