<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchParent"
    android:layout_marginTop="@dimen/margin_5dp"
    android:layout_marginBottom="@dimen/margin_5dp"
    tools:context=".fragments.UserDetailFragment">

    <ScrollView
        style="@style/MatchParent">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="@dimen/margin_5dp"
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_marginRight="@dimen/margin_5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_white">

        <LinearLayout
        android:layout_marginLeft="@dimen/margin_5dp"
        android:layout_marginRight="@dimen/margin_5dp"
        android:orientation="vertical"
        style="@style/MatchParent">

            <TextView
                android:textStyle="bold"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textSize="@dimen/text_size_25sp"
               android:layout_gravity="center_horizontal"
                android:text="@string/user_details"
                style="@style/WrapContent"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/margin_40dp"
            android:layout_width="@dimen/margin_40dp"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tv_user_detail_name"
            style="@style/UserData"
            android:text="@string/name" />

            <TextView
                android:id="@+id/tv_user_username"
                style="@style/UserData"
                android:text="@string/username" />

        <TextView
            android:id="@+id/tv_user_detail_email"
            style="@style/UserData"
            android:text="@string/email" />

        <TextView
            android:id="@+id/tv_user_detail_city"
           style="@style/UserData"
            android:text="@string/city" />

        <TextView
            android:id="@+id/tv_user_detail_zip"
            style="@style/UserData"
            android:text="@string/zipcode" />

            <Button
            android:id="@+id/btn_show_posts"
            android:background="@drawable/button_style"
            android:textStyle="bold"
            android:text="@string/show_posts"
            android:layout_marginTop="@dimen/margin_20dp"
            android:layout_marginRight="@dimen/margin_20dp"
            android:layout_marginLeft="@dimen/margin_20dp"
            android:layout_marginBottom="@dimen/margin_50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    </androidx.cardview.widget.CardView>
    </ScrollView>
</FrameLayout>